...
                android:fontFamily="@font/poppins_bold"
                android:text="Username"
                android:textColor="#6D616F"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Comment text goes here..."
                android:textColor="#6D616F"
...
